--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -52,8 +52,12 @@
     <div>
       <span>Last updated on 07-March-2018</span>
     </div>
+
     <div>
       <span>Designed and developed by Prem Prakash</span>
+    </div>
+    <div>
+        © 2018 Copyright
     </div>
   </footer>
 </div>
