--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="row custom-row">
+<div class="row custom-row" [@slideInOut]>
     <!-- <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12 left-aside box-shadow">
         <nvd3 [options]="options" [data]="data"></nvd3>
     </div>
@@ -47,6 +47,9 @@
             <li>
                 <a [routerLink]="['myAsset']">My Asset</a>
             </li>
+            <!--li>
+                <a [routerLink]="['mathematics']">Math</a>
+            </li !-->
         </ul>
     </div>
     <div class="col-lg-10 col-md-10 col-sm-10 col-xs-12 right-aside box-shadow">
