--- a/src/app/dashboard/js-tutorials/iife/component.html
+++ b/src/app/dashboard/js-tutorials/iife/component.html
@@ -1,4 +1,4 @@
-<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" scroll-tracker>
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" scroll-tracker [@slideInOut]>
     <div class="row">
         <app-header [header]="header"></app-header>
     </div>
@@ -42,5 +42,5 @@
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
             <app-comment mode="read" [commentDetails]="commentDetails"></app-comment>
         </div>
-</div>
+    </div>
 </div>
