--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="row custom-row">
+<div class="row custom-row" [@slideInOut]>
   <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 left-aside box-shadow">
     <div class="row">
       <img src="../assets/prem.png">
