--- a/src/app/sign-up/sign-up.html
+++ b/src/app/sign-up/sign-up.html
@@ -1,4 +1,4 @@
-<div class="row custom-row">
+<div class="row custom-row" [@slideInOut]>
     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12"></div>
     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 box-shadow">
         <h3 style="text-align:center;">Sign Up</h3>
