--- a/src/styles.scss
+++ b/src/styles.scss
@@ -67,3 +67,20 @@ hr{
         width: 19%;
     }
  }
+
+ .first-indent {
+    margin-left: 25px;
+ }
+ .keword-color{
+     color: #73a7f5;
+ }
+ .code-example {
+    padding: 10px;
+    background-color: #8a8787;
+    border-radius: 5px;
+    color: white;
+    margin: 0;
+    p{
+        color: rgb(233, 229, 229);
+    }
+}
