--- a/src/app/dashboard/js-tutorials/closure/component.html
+++ b/src/app/dashboard/js-tutorials/closure/component.html
@@ -1,40 +1,68 @@
-<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" scroll-tracker>
-        <div class="row">
-            <app-header [header]="header"></app-header>
-        </div>
-        <div class="row">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <h4><b>Closure</b>
-                    is a speacial feature available in javascript. It can be defined in two steps 
-                    <ol>
-                        <li> 
-                            A function inside another function and the inner function has access to 
-                            the scope of outer function.
-                        </li>
-                        <li>
-                                Though the outer function will get executed still inner function can access
-                                the scope of outer function. This is the most powerfull feature.
-                        </li>
-                    </ol>
-                </h4>
-                <h4>
-                    Examples
-                    <div class="row code-example">
-                        <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
-                                <span></span><span>function addNumber</span><span> (num1</span><span>)</span>
-                                <span> {{'{'}}</span><br>
-                                <span>&nbsp;&nbsp;&nbsp;&nbsp;return function {{'(num2)' + ' {'}}
-                                    <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; return {{'num1' + ' + ' + 'num2 ;'}}<br>
-                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{'}'}}
-                                </span><br>
-                                <span>{{'}'}}</span><br>
-                                <span>//Execute the above functions with different inputs</span><br>
-                                <span>var add5 = addNumber(5);</span><br>
-                                <span>add5(1) => 6 </span><br>
-                                <span>add5(2) => 7 </span><br>
-                                <span>add5(10) => 15 </span><br>
-                                <span>add5(4) => 9 </span><br>
-                                <span>// you can explore it with some more examples</span>
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" scroll-tracker [@slideInOut]>
+    <div class="row">
+        <app-header [header]="header"></app-header>
+    </div>
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <h4>
+                <b>Closure</b>
+                is a speacial feature available in javascript. It can be defined in two steps
+                <ol>
+                    <li>
+                        A function inside another function and the inner function has access to the scope of outer function.
+                    </li>
+                    <li>
+                        Though the outer function will get executed still inner function can access the scope of outer function. This is the most
+                        powerfull feature.
+                    </li>
+                </ol>
+            </h4>
+            <h4>
+                Examples
+                <div class="row code-example">
+                    <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
+                        <div class="row">
+                            <div class="col-lg-6 col-md-6 col-sm-6 col-xs12">
+                                <span>
+                                    function xyz {{'(' + ')' + ' {'}}
+                                    <br> &nbsp;&nbsp;&nbsp;&nbsp;{{'for(var i = 0; i
+                                    < 5; i++) ' + ' { '}}<br>
+                                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{'setTimeOut ( function()
+                                        {
+                                        '}}<br>
+                                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{'console.log(i); '}}<br>
+                                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{'}, 0); '}}<br>
+                                                &nbsp;&nbsp;&nbsp;&nbsp;{{'} '}}<br>{{'} '}}
+                                            </span><br>
+                                            <span>//Execute the above functions with different inputs</span><br>
+                                            {{'xyz();'}}<br>
+                                            {{'What do you think? What should be output here ?'}}<br>
+                                            {{'0'}}, {{'1'}}, {{'2'}}, {{'3'}}, {{'4'}}<br>
+                                            {{'or'}}<br>
+                                            {{'5'}}, {{'5'}}, {{'5'}}, {{'5'}}, {{'5'}}<br>
+                                            <button (click)="answer = true;" class="btn btn-success">View Anaswer</button>
+                                            {{answer}}<br>
+                                            <span [hidden]="!answer">
+                                                Output will come as 5, 5, 5, 5, 5
+                                            </span>
+                                </div>
+                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs12">
+                                        <span></span><span>function addNumber</span><span> (num1</span><span>)</span>
+                                        <span> {{'{ '}}</span><br>
+                                        <span>&nbsp;&nbsp;&nbsp;&nbsp;return function {{'(num2) ' + ' { '}}
+                                            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; return {{'num1 ' + ' + ' + 'num2
+                                        ; '}}<br>
+                                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{'} '}}
+                                        </span><br>
+                                        <span>{{'} '}}</span><br>
+                                        <span>//Execute the above functions with different inputs</span><br>
+                                        <span>var add5 = addNumber(5);</span><br>
+                                        <span>add5(1) => 6 </span><br>
+                                        <span>add5(2) => 7 </span><br>
+                                        <span>add5(10) => 15 </span><br>
+                                        <span>add5(4) => 9 </span><br>   
+                                </div>                                
+                        </div>   
                         </div>
                         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 pull-right btn-container">
                             <app-btn-like [feedback]="feedback" (commentEvent)="enterComment($event)"></app-btn-like>
@@ -52,3 +80,4 @@
                 </div>
         </div>
     </div>
+    <app-scroll-top></app-scroll-top>
