--- a/src/app/dashboard/my-asset/component.html
+++ b/src/app/dashboard/my-asset/component.html
@@ -1,4 +1,4 @@
-<diV class="row">
+<diV class="row" [@slideInOut]>
     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
         <h3>Asset</h3>
         <hr>
@@ -54,7 +54,7 @@
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
             <div class="finance-badge-container total-asset">
                 <h4>Saving this month</h4>
-                <h3>{{totalAsset}}</h3>
+                <h3>{{monthlySaving}}</h3>
                 <span *ngIf="isLoadingAsset">
                         <i class="fa fa-spinner fa-spin"></i>
                 </span>
@@ -116,7 +116,7 @@
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
             <div class="finance-badge-container total-expense">
                 <h4>Expense this month</h4>
-                <h3>{{totalExpense}}</h3>
+                <h3>{{monthlyExpense}}</h3>
                 <span *ngIf="isLoadingExpense">
                         <i class="fa fa-spinner fa-spin"></i>
                 </span>
