--- a/src/app/error-401/401.html
+++ b/src/app/error-401/401.html
@@ -1,4 +1,4 @@
-<div class="row custom-row">
+<div class="row custom-row" [@slideInOut]>
     <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
     </div>
     <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12 box-shadow">
