--- a/src/app/personal-detail/personal-detail.component.html
+++ b/src/app/personal-detail/personal-detail.component.html
@@ -1,4 +1,4 @@
-<div class="row custom-row">
+<div class="row custom-row" [@slideInOut]>
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="padding: 15px">
     <h3 style="text-align:center;">Experience Detail</h3>
     <hr style="margin-bottom:15px;">
