committed latest changes

--- a/src/app/_widgets/like-button/component.html
+++ b/src/app/_widgets/like-button/component.html
@@ -7,3 +7,4 @@
         </span>
 </button>
 <button class="btn btn-info" style="color:rgb(293, 247, 293)" (click)="comment()">Comment</button>
+<app-toaster></app-toaster>
