--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -48,14 +48,14 @@
         <i class="fab fa-linkedin w3-hover-opacity"></i>
       </a>
       <div>
-        <span>Last updated on 02-April-2018</span>
+        <span>Last updated on 28-April-2018</span>
       </div>
 
       <div>
         <span>Designed and developed by Prem Prakash</span>
       </div>
       <div>
-          Copyright (©) 2018. All rights reserved.
+        © Copyright 2018. All rights reserved.
       </div>
     </div>
   </footer>
