--- a/src/app/dashboard/voting/component.html
+++ b/src/app/dashboard/voting/component.html
@@ -1,4 +1,4 @@
-<div class="row slide-down" slide-animation>
+<!--div class="row slide-down" slide-animation>
     <div class="col-lg-2 col-md-2 col-sm-2 col-12">
 
     </div>
@@ -79,5 +79,8 @@
     </div>
     <div class="col-lg-2 col-md-2 col-sm-2 col-12">
     </div>
+</div !-->
+<div class="row slide-down" slide-animation>
+    <h2 style="margin: auto;font-size:16px;">Voting Completed</h2>
 </div>
 <app-toaster></app-toaster>
