--- a/src/app/dashboard/js-tutorials/prototype/component.html
+++ b/src/app/dashboard/js-tutorials/prototype/component.html
@@ -14,7 +14,7 @@
         </div>
     </div>
     <div class="row code-example">
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+        <div class="col-lg-9 col-md-9 col-sm-9 col-12">
             <h4>
                 <span class="keword-color">{{"function "}}</span>{{"Person(name, age) {"}}</h4>
             <h4 class="first-indent">
@@ -58,5 +58,16 @@
             <h4>{{"// person1.[[Prototype]].[[Prototype]] is null, stop searching,"}}</h4>
             <h4>{{"// no property found, return undefined."}}</h4>
         </div>
+        <div class="col-lg-3 col-md-3 col-sm-3 col-12">
+                <app-btn-like [feedback]="feedback" (commentEvent)="enterComment($event)"></app-btn-like>
+        </div>
     </div>
+    <div class="row" style="margin-top:10px;">
+            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" [hidden]="!isCommentSelected">
+                <app-comment mode="create" [commentDetails]="commentDetails"></app-comment>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                <app-comment mode="read" [commentDetails]="commentDetails"></app-comment>
+            </div>
+        </div>
 </div>
