--- a/src/app/dashboard/component.html
+++ b/src/app/dashboard/component.html
@@ -13,9 +13,9 @@
             <li class="nav-item">
                 <a [routerLink]="['myAsset']" class="nav-link">My Asset</a>
             </li>
-            <!--li class="nav-item">
-                <a [routerLink]="['voting']" class="nav-link">Vote</a>
-            </li !-->
+            <li class="nav-item">
+                <a [routerLink]="['mahayag']" class="nav-link">महायग</a>
+            </li>
         </ul>
     </div>
     <div class="col-lg-10 col-md-10 col-sm-10 col-12 right-aside box-shadow">
