--- a/src/app/home/component.html
+++ b/src/app/home/component.html
@@ -12,7 +12,7 @@
             </div>
             <div class="col-lg-12 col-md-12">
               <i class="fa fa-home fa-fw font-icon-override"></i>
-              <span>Pune, India</span>
+              <span>Belfast, UK</span>
             </div>
             <div class="col-lg-12 col-md-12">
               <i class="fa fa-envelope fa-fw font-icon-override"></i>
@@ -20,7 +20,7 @@
             </div>
             <div class="col-lg-12 col-md-12">
               <i class="fa fa-phone font-icon-override"></i>
-              <span>+918446012999</span>
+              <span>+447404613870</span>
             </div>
           </div>
           <hr>
@@ -77,8 +77,8 @@
             </div>
           </div>
           <div class="row skill-container">
-            <div class="skill-name" style="width:60%" title="Angular js 2/4">
-              <span>60%</span>
+            <div class="skill-name" style="width:70%" title="Angular js 2/4">
+              <span>70%</span>
             </div>
           </div>
           <div class="row">
