--- a/src/app/dashboard/mahayag/component.html
+++ b/src/app/dashboard/mahayag/component.html
@@ -1,21 +1,32 @@
 <div class="row">
     <div class="col-12">
-
+        <h3 style="font-style: italic;color: #F44336;">श्री सहस्त्र चंडी महायज्ञ</h3>
+        <hr>
+        <ul class="nav nav-tabs" role="tablist">
+            <li class="nav-item">
+                <a [routerLink]="['add-payment']" class="nav-link">चंदा का विवरण डालें</a>
+            </li>
+            <li class="nav-item">
+                <a [routerLink]="['payment-details']" class="nav-link">चंदा का विवरण देखें</a>
+            </li>
+        </ul>
     </div>
 </div>
+<router-outlet></router-outlet>
+<hr>
 <div class="row">
-    <div class="col-6">
+    <div class="col-12 col-lg-6 col-md- col-sm-6">
         <img style="width: 530px;" src="../../../assets/img1.jpg" />
     </div>
-    <div class="col-6">
+    <div class="col-12 col-lg-6 col-md- col-sm-6">
         <img style="width: 530px;" src="../../../assets/img2.jpg" />
     </div>
 </div>
 <div class="row">
-    <div class="col-6">
+    <div class="col-12 col-lg-6 col-md- col-sm-6">
         <img style="width: 530px;" src="../../../assets/img3.jpg" />
     </div>
-    <div class="col-6">
+    <div class="col-12 col-lg-6 col-md- col-sm-6">
         <img style="width: 530px;" src="../../../assets/img4.jpg" />
     </div>
 </div>
