--- a/src/app/dashboard/mahayag/component.html
+++ b/src/app/dashboard/mahayag/component.html
@@ -14,7 +14,7 @@
 </div>
 <router-outlet></router-outlet>
 <hr>
-<div class="row">
+<div class="row" *ngIf="activeRoute.children.length === 0">
     <div class="col-12 col-lg-6 col-md- col-sm-6">
         <img style="width: 530px;" src="../../../assets/img1.jpg" />
     </div>
@@ -22,7 +22,7 @@
         <img style="width: 530px;" src="../../../assets/img2.jpg" />
     </div>
 </div>
-<div class="row">
+<div class="row" *ngIf="activeRoute.children.length === 0">
     <div class="col-12 col-lg-6 col-md- col-sm-6">
         <img style="width: 530px;" src="../../../assets/img3.jpg" />
     </div>
