--- a/src/app/dashboard/mahayag/view/component.html
+++ b/src/app/dashboard/mahayag/view/component.html
@@ -1,19 +1,20 @@
 <div class="row">
-    <div class="col-12">
-        <h4>चंदा का विवरण</h4>
-        <table class="table table-dark table-hover">
-                <thead>
-                  <tr>
-                    <th>नाम</th>
-                    <th>चंदा का राशि</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>Prem Prakash</td>
-                    <td>10,000</td>
-                  </tr>
-                </tbody>
-              </table>
-    </div>
+  <div class="col-12">
+    <h4>चंदा का विवरण</h4>
+    <div class="total-amount"><h4>अभी तक चंदा जमा हुआ है : {{totalAmount}}</h4></div>
+    <table class="table table-bordered table-hover">
+      <thead>
+        <tr>
+          <th>नाम</th>
+          <th>चंदा का राशि</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let chandaDetail of chandaDetails" style="cursor: pointer;">
+          <td>{{chandaDetail.name}}</td>
+          <td>{{chandaDetail.amount}} /-</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
