--- a/src/app/dashboard/mahayag/view/component.scss
+++ b/src/app/dashboard/mahayag/view/component.scss
@@ -11,3 +11,13 @@ h1, h2, h3, h4, h5 {
 hr {
     margin-bottom: 20px;
 }
+
+.total-amount {
+    background: #43ded0;
+    border-radius: 40px;
+    /* padding: 10px; */
+    padding-top: 20px;
+    padding-bottom: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
