--- a/src/app/dashboard/mahayag/add/component.html
+++ b/src/app/dashboard/mahayag/add/component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row chanda-details">
     <div class="col-12">
         <h4>चंदा का विवरण</h4>
         <form #paymentForm="ngForm" (ngSubmit)="save()">
