--- a/src/app/dashboard/mahayag/add/component.scss
+++ b/src/app/dashboard/mahayag/add/component.scss
@@ -11,3 +11,9 @@ h1, h2, h3, h4, h5 {
 hr {
     margin-bottom: 20px;
 }
+
+.chanda-details {
+    box-shadow: 0px 0px 11px 0px grey;
+    padding: 10px;
+    margin: 10px 0;
+}
