--- a/src/app/dashboard/mahayag/view/component.scss
+++ b/src/app/dashboard/mahayag/view/component.scss
@@ -21,3 +21,13 @@ hr {
     margin-top: 10px;
     margin-bottom: 10px;
 }
+
+.donar-details,.chanda-list {
+    box-shadow: 0px 0px 11px 0px grey;
+    padding: 10px;
+    margin: 10px 0;
+}
+
+.selected-row {
+    background-color: #89dce6;
+}
