--- a/src/app/contact-me/contact-me.component.html
+++ b/src/app/contact-me/contact-me.component.html
@@ -8,7 +8,7 @@
         <h4><i class="fa fa-mobile"></i> Phone</h4>
       </div>
       <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
-        <h4 class="font-bold">+91 844 601 2999</h4>
+        <h4 class="font-bold">+44 740 461 3870</h4>
       </div>
     </div>
     <div class="row">
@@ -16,7 +16,7 @@
         <h4><i class="fa fa-map-marker"></i> Location</h4>
       </div>
       <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
-        <h4 class="font-bold">Pune, Mahrashtra, India</h4>
+        <h4 class="font-bold">United Kingdom</h4>
       </div>
     </div>
     <div class="row">
