--- a/src/app/dashboard/mahayag/component.html
+++ b/src/app/dashboard/mahayag/component.html
@@ -16,17 +16,17 @@
 <hr>
 <div class="row" *ngIf="activeRoute.children.length === 0">
     <div class="col-12 col-lg-6 col-md- col-sm-6">
-        <img style="width: 530px;" src="../../../assets/img1.jpg" />
+        <img src="../../../assets/img1.jpg" />
     </div>
     <div class="col-12 col-lg-6 col-md- col-sm-6">
-        <img style="width: 530px;" src="../../../assets/img2.jpg" />
+        <img src="../../../assets/img2.jpg" />
     </div>
 </div>
 <div class="row" *ngIf="activeRoute.children.length === 0">
     <div class="col-12 col-lg-6 col-md- col-sm-6">
-        <img style="width: 530px;" src="../../../assets/img3.jpg" />
+        <img src="../../../assets/img3.jpg" />
     </div>
     <div class="col-12 col-lg-6 col-md- col-sm-6">
-        <img style="width: 530px;" src="../../../assets/img4.jpg" />
+        <img src="../../../assets/img4.jpg" />
     </div>
 </div>
