--- a/src/app/home/component.html
+++ b/src/app/home/component.html
@@ -12,7 +12,7 @@
             </div>
             <div class="col-lg-12 col-md-12">
               <i class="fa fa-home fa-fw font-icon-override"></i>
-              <span>Belfast, UK</span>
+              <span>United Kingdom</span>
             </div>
             <div class="col-lg-12 col-md-12">
               <i class="fa fa-envelope fa-fw font-icon-override"></i>
