--- a/src/app/dashboard/component.scss
+++ b/src/app/dashboard/component.scss
@@ -2,4 +2,45 @@
     .right-aside {
          max-width: 81.4%;
     }
+    .mobile-screen {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 400px) {
+    .large-screen {
+        display: none;
+    }
+    .mobile-screen {
+        display: block;
+    }
+    .hamburg {
+        padding: 10px;
+        box-shadow: 0px 0px 10px 0px grey;
+        /* margin: 7px; */
+        /* margin: 10px 0px; */
+        margin-top: 3px;
+        margin-bottom: 15px;
+        float: left;
+        cursor: pointer;
+        -webkit-transition: width 2s; /* For Safari 3.1 to 6.0 */
+        transition: width 2s;
+    }
+    .menue div {
+        width: 35px;
+        height: 3px;
+        background-color: black;
+        margin: 6px 0;
+    }
+    .hamburg .menue {
+        display: none;
+    }
+    .hamburg .close {
+        font-size: 27px;
+        color: red;
+        display: none;
+    }
+    .hamburg .show {
+        display: block;
+    }
 }
